@@ -39,23 +39,16 @@ module MusicBrainz
         # If this already is an instance of MBID store it directly.
         if mbid.is_a? MBID
           @id = mbid
+          # Check if the entity type of @id matches that of the current object.
+          unless @id.entity == self.entity_type
+            exception = EntityTypeNotMatchingError.new(@id.entity.to_s)
+            @id = nil
+            raise exception
+          end
         elsif mbid.nil?
           @id = nil
         else
-          # Try to create an MBID from URI
-          begin
-            @id = MBID.from_uri(mbid)
-          rescue InvalidMBIDError => e
-            # Try it again and use mbid as the UUID
-            @id = MBID.from_uuid(self.entity_type, mbid)
-          end
-        end
-        
-        # Check if the entity type of @id matches that of the current object.
-        unless @id.nil? or @id.entity == self.entity_type
-          exception = EntityTypeNotMatchingError.new(@id.entity.to_s)
-          @id = nil
-          raise exception
+          @id = MBID.from_string(self.entity_type, mbid)
         end
       end
       
